<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.okb.odutio.activity.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_label"
            android:padding="10dp"
            android:text="@string/email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/seperator1"
            android:layout_below="@+id/email_label"
            android:background="@color/seperatorColor"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height=".3dp"/>

        <TextView
            android:id="@+id/email_desc"
            android:padding="10dp"
            android:text="@string/email_description"
            android:layout_below="@+id/seperator1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/seperator2"
            android:layout_below="@+id/email_desc"
            android:background="@color/seperatorColor"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height=".3dp"/>

        <TextView
            android:id="@+id/income_label"
            android:layout_below="@+id/seperator2"
            android:padding="10dp"
            android:text="@string/your_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_below="@+id/seperator2"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            style="?android:attr/progressBarStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:indeterminate="true"/>

        <TextView
            android:id="@+id/income"
            android:layout_below="@+id/seperator2"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/seperator3"
            android:layout_below="@+id/income_label"
            android:background="@color/seperatorColor"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height=".3dp"/>

        <TextView
            android:id="@+id/income_desc"
            android:padding="10dp"
            android:text="@string/income_description"
            android:layout_below="@+id/seperator3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/seperator4"
            android:layout_below="@+id/income_desc"
            android:background="@color/seperatorColor"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height=".3dp"/>

        <Button
            android:layout_below="@+id/seperator4"
            android:text="@string/send_feedback"
            android:textAllCaps="false"
            android:onClick="onSendFeedbackClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</ScrollView>
