<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.okb.odutio.activity.LoginActivity">

    <ImageView
        android:layout_centerHorizontal="true"
        android:src="@drawable/white_logo_color_background"
        android:adjustViewBounds="true"
        android:layout_width="60dp"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/login_description"
        android:gravity="center"
        android:padding="25dp"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            style="?android:attr/buttonStyle"
            android:background="@color/facebookColor"
            android:onClick="onFacebookClick"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <Button
                style="@style/captionOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:drawableStart="@drawable/facebook_logo"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/continue_facebook" />
        </FrameLayout>

        <FrameLayout
            style="?android:attr/buttonStyle"
            android:background="@android:color/white"
            android:onClick="onGoogleClick"
            android:layout_width="match_parent"
            android:layout_height="45dp" >

            <Button
                style="@style/captionOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:drawableStart="@drawable/google_icon"
                android:gravity="center"
                android:text="@string/continue_google" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
